--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Hub Central -Attendance</title>
+  <title>Assignment</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,32 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
 
-  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-
-
-  <!-- Bootsnav -->
-  <link href="assets/plugins/bootstrap/css/bootsnav.css" rel="stylesheet">
-
-  <!-- Icons -->
-  <link href="assets/plugins/icons/css/icons.css" rel="stylesheet">
-
-  <!-- Bootstrap wysihtml5 ditor-->
-  <link rel="stylesheet" type="text/css" href="assets/plugins/bootstrap/css/bootstrap-wysihtml5.css">
-
-  <!-- Animate -->
-  <link href="assets/plugins/animate/animate.css" rel="stylesheet">
-
-  <!-- Nice Select Option css -->
-  <link rel="stylesheet" href="assets/plugins/nice-select/css/nice-select.css">
-
-  <!-- Date Dropper -->
-  <link href="assets/plugins/date-dropper/datedropper.css" rel="stylesheet">
-
-  <!-- Aos Css -->
-  <link href="assets/plugins/aos-master/aos.css" rel="stylesheet">
-
-  <!-- Slick Slider -->
-  <link href="assets/plugins/slick-slider/slick.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
   <!-- Custom style -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -50,35 +25,13 @@
 </head>
 <body>
   <app-root></app-root>
-  <!-- Jquery js-->
-  <script src="assets/js/jquery.min.js"></script>
 
-  <!-- Bootstrap js-->
-  <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-  <!-- <script src="assets/js/metisMenu.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-
-  <!-- Bootsnav js-->
-  <script src="assets/plugins/bootstrap/js/bootsnav.js"></script>
-
-  <!-- Slick Slider js-->
-  <!-- <script src="assets/plugins/slick-slider/slick.js"></script> -->
-
-  <!-- wysihtml5 editor js -->
-  <!-- <script src="assets/plugins/bootstrap/js/wysihtml5-0.3.0.js"></script>
-  <script src="assets/plugins/bootstrap/js/bootstrap-wysihtml5.js"></script> -->
-
+  
   <!-- Aos Js -->
   <script src="assets/plugins/aos-master/aos.js"></script>
 
-  <!-- Date dropper js-->
-  <!-- <script src="assets/plugins/date-dropper/datedropper.js"></script> -->
-
-  <!-- Nice Select -->
-  <!-- <script src="assets/plugins/nice-select/js/jquery.nice-select.min.js"></script> -->
-
-  <!-- Custom Js -->
-  <script src="assets/js/custom.js"></script>
 
 </body>
 </html>
